fix style scrollbar

--- a/src/components/AboutTeam/AboutTeam.module.scss
+++ b/src/components/AboutTeam/AboutTeam.module.scss
@@ -3,7 +3,7 @@
   :global {
     .container {
       @include adaptiveValue('padding-top', 28, 40, 0, 1200, 390);
-      @include adaptiveValue('padding-bottom', 97, 40, 0, 1200, 390);
+      @include adaptiveValue('padding-bottom', 56, 40, 0, 1200, 390);
 
       .swiper {
         margin-right: toRem(-22);
@@ -13,23 +13,13 @@
         padding-right: toRem(22);
         padding-left: toRem(22);
         padding-bottom: toRem(36);
-        .swiper-scrollbar {
-          --swiper-scrollbar-border-radius: 4px;
-          --swiper-scrollbar-top: auto;
-          --swiper-scrollbar-bottom: 0;
-          --swiper-scrollbar-left: auto;
-          --swiper-scrollbar-right: 0;
-          --swiper-scrollbar-sides-offset: 1%;
-          --swiper-scrollbar-bg-color: #d9d9d9;
-          --swiper-scrollbar-drag-bg-color: #0e0e0e;
-          --swiper-scrollbar-size: 2px;
-        }
       }
     }
   }
 }
 .content {
   cursor: grab;
+  @include adaptiveValue('margin-bottom', 24, 36, 0, 1200, 768);
   .image {
     position: relative;
     overflow: hidden;
@@ -37,14 +27,13 @@
     border-radius: toRem(20);
     border: toRem(1) solid var(--black);
 
-
     @media (min-width: $mobile) {
       padding-bottom: 122.695035%; /* 346/282 */
       &:not(:last-child) {
         margin-bottom: toRem(12);
       }
     }
-    @media (max-width:$mobile){
+    @media (max-width: $mobile) {
       padding-bottom: 98.387097%; /* 366/372 */
       &:not(:last-child) {
         margin-bottom: toRem(36);
@@ -122,10 +111,60 @@
     @include adaptiveValue('right', 8, 48, 0, 1200, 768);
   }
 }
-
 .navigation {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: toRem(35);
+
   .scrollbar {
+    flex: 0 1 93.5%; /* 1122/1200 */
+    position: relative;
+    :global {
+      .swiper-scrollbar {
+        border-radius: 4px;
+        -ms-touch-action: none;
+        background: rgba(0, 0, 0, 0.1);
+        .swiper-scrollbar-disabled > &,
+        &.swiper-scrollbar-disabled {
+          display: none !important;
+        }
+        .swiper-horizontal > &,
+        &.swiper-scrollbar-horizontal {
+          position: absolute;
+          left: 0;
+          top: 0;
+          top: auto;
+          z-index: 50;
+          height: 2px;
+          width: 100%;
+        }
+      }
+      .swiper-scrollbar-drag {
+        height: 100%;
+        width: 100%;
+        position: relative;
+        background: var(--black);
+        border-radius: 4px;
+        left: 0;
+        top: 0;
+      }
+      .swiper-scrollbar-cursor-drag {
+        cursor: move;
+      }
+      .swiper-scrollbar-lock {
+        display: none;
+      }
+    }
   }
+
   .pagination {
+    flex: 0 1 3.583333%; /* 43/1200 */
+    text-align: right;
+    min-width: toRem(45);
+    :global {
+      .swiper-pagination {
+      }
+    }
   }
 }
